k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practo-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: practo-backend
  template:
    metadata:
      labels:
        app: practo-backend
    spec:
      containers:
        - name: practo-backend
          image: practoacr.azurecr.io/practo-backend:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /swagger/index.html
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: practo-backend
spec:
  selector:
    app: practo-backend
  ports:
    - port: 5000
      targetPort: 8080
